# test3project

./: .envrc.local.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  bootstrap.py  dodo.py  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md  lsp-setup.md  settings.json  statusline-command.sh
.codex/: config.toml
.config/pyproject_template/: settings.toml
.gemini/: settings.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: breaking-change-detection.yml  ci.yml  pr-checks.yml  release.yml  testpypi.yml
docs/: TABLE_OF_CONTENTS.md  index.md
docs/development/: AI_SETUP.md  ci-cd-testing.md  coding-standards.md  extensions.md  release-and-automation.md
docs/development/ai/: command-blocking.md  statusline.md
docs/examples/: README.md
docs/getting-started/: installation.md
docs/reference/: api.md
docs/template/: index.md  manage.md  migration.md  new-project.md  tools-reference.md  updates.md
docs/usage/: basics.md
examples/: advanced_usage.py  basic_usage.py  cli_usage.py
src/package_name/: __init__.py  core.py  logging.py
src/test3project/: __init__.py  core.py  logging.py  py.typed
tests/: test_core.py  test_example.py  test_logging.py
tests/pyproject_template/: conftest.py  test_pyproject_template_main.py  test_setup_repo.py  test_utils.py
tmp/: .gitkeep
tools/hooks/ai/: block-dangerous-commands.py  test_hook.py
tools/pyproject_template/: check_template_updates.py  configure.py  manage.py  migrate_existing_project.py  setup_repo.py
