[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "test3project"
description = "a test project"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
    {name = "Eric Davis", email = "endavis+test3project@endavis.net"},
]
license = {file = "LICENSE"}
keywords = ["keyword1", "keyword2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "doit>=0.36.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.5",
    "mypy>=1.0",
    "pre-commit>=3.7.0",
    "mkdocs-material>=9.5",
    "codespell>=2.2",
    "pyproject-fmt>=2.0",
    "commitizen>=3.0",
    "pyright>=1.1.0",
]
security = [
    "pip-audit>=2.6",
    "bandit>=1.7",
    "pip-licenses>=4.0",
]

[project.urls]
Homepage = "https://github.com/endavis/test3project"
Repository = "https://github.com/endavis/test3project"
Documentation = "https://github.com/endavis/test3project/tree/main/docs"
Issues = "https://github.com/endavis/test3project/issues"

[project.scripts]

[tool.hatch.build.targets.wheel]
packages = ["src/test3project"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^(?:v|d)(?P<version>.+)$"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/test3project/_version.py"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/_version.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations (type hints)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any)
    "ANN001",  # Missing type annotation for function argument
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN101",  # Missing type annotation for self in method
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
]

[tool.ruff.lint.per-file-ignores]
"bootstrap.py" = ["E501"]
"tools/pyproject_template/*.py" = [
    "E501",    # Line too long
    "RUF001",  # Ambiguous unicode
    "SIM102",  # Nested if
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
# Ignore directories with duplicate module names or standalone scripts
exclude = ["tools/pyproject_template/", ".claude/", ".gemini/", ".codex/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["test3project"]

[tool.coverage.report]
skip_covered = false
show_missing = true
precision = 2
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "tmp/htmlcov"

[tool.coverage.xml]
output = "tmp/coverage.xml"

[tool.bandit]
exclude_dirs = [
    "tests",
    "tmp",
    ".venv",
    "docs",
    "examples",
    ".git",
    ".github",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "site",
    ".claude",
    ".gemini",
    ".codex",
    ".devcontainer",
    ".vscode",
]
skips = [
    "B101",
    "B603",
    "B607",
]

[tool.codespell]
skip = "tmp,.venv,.git,*.lock,*.pyc,__pycache__"
ignore-words-list = "crate"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true
merge_prerelease = true
bump_pattern = "^(feat|fix|refactor|perf)"
bump_map = { "feat" = "MINOR", "fix" = "PATCH", "refactor" = "PATCH", "perf" = "PATCH" }
change_type_order = ["BREAKING CHANGE", "feat", "fix", "refactor", "perf"]

[tool.pyright]
# LSP support for Claude Code - provides fast code navigation and type checking
include = [
    "src",
    "tests",
    "*.py",           # Root level Python files (dodo.py, setup-repo.py, configure.py)
    "tools",          # Tools directory (migrate_existing_project.py)
    ".github",        # Any Python in GitHub workflows/scripts
]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/tmp",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/.ruff_cache",
    "**/site",        # mkdocs build output
    "**/.git",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
