[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs>=0.4", "hatchling>=1.24" ]

[project]
name = "test3project"
description = "a test project"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [ "keyword1", "keyword2" ]
license = { file = "LICENSE" }
authors = [
  { name = "Eric Davis", email = "endavis+test3project@endavis.net" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dynamic = [ "version" ]
dependencies = [
  "doit>=0.36",
  "rich>=13",
]

optional-dependencies.dev = [
  "codespell>=2.2",
  "commitizen>=3",
  "mkdocs-material>=9.5",
  "mypy>=1",
  "pre-commit>=3.7",
  "pyproject-fmt>=2",
  "pyright>=1.1",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-xdist>=3.5",
  "ruff>=0.5",
]
optional-dependencies.security = [
  "bandit>=1.7",
  "pip-audit>=2.6",
  "pip-licenses>=4",
]
urls.Documentation = "https://github.com/endavis/test3project/tree/main/docs"
urls.Homepage = "https://github.com/endavis/test3project"
urls.Issues = "https://github.com/endavis/test3project/issues"
urls.Repository = "https://github.com/endavis/test3project"

[tool.hatch.build.targets.wheel]
packages = [ "src/test3project" ]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^(?:v|d)(?P<version>.+)$"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/test3project/_version.py"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [ "**/_version.py" ]

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "lf"
lint.select = [
  "ANN",   # flake8-annotations (type hints)
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "RUF",   # Ruff-specific rules
  "SIM",   # flake8-simplify
  "UP",    # pyupgrade
  "W",     # pycodestyle warnings
]
lint.ignore = [
  "ANN001", # Missing type annotation for function argument
  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN101", # Missing type annotation for self in method
  "ANN201", # Missing return type annotation for public function
  "ANN202", # Missing return type annotation for private function
  "ANN401", # Dynamically typed expressions (Any)
]
lint.per-file-ignores."bootstrap.py" = [ "E501" ]
lint.per-file-ignores."tools/pyproject_template/*.py" = [
  "E501",   # Line too long
  "RUF001", # Ambiguous unicode
  "SIM102", # Nested if
]

[tool.codespell]
skip = "tmp,.venv,.git,*.lock,*.pyc,__pycache__"
ignore-words-list = "crate"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-config --strict-markers"
testpaths = [ "tests" ]
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]

[tool.coverage.run]
branch = true
source = [ "test3project" ]

[tool.coverage.report]
skip_covered = false
show_missing = true
precision = 2
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "tmp/htmlcov"

[tool.coverage.xml]
output = "tmp/coverage.xml"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
# Ignore directories with duplicate module names or standalone scripts
exclude = [ "tools/pyproject_template/", ".claude/", ".gemini/", ".codex/" ]

[tool.pyright]
# LSP support for Claude Code - provides fast code navigation and type checking
include = [
  "src",
  "tests",
  "*.py",    # Root level Python files (dodo.py, setup-repo.py, configure.py)
  "tools",   # Tools directory (migrate_existing_project.py)
  ".github", # Any Python in GitHub workflows/scripts
]
exclude = [
  "**/__pycache__",
  "**/.venv",
  "**/tmp",
  "**/.pytest_cache",
  "**/.mypy_cache",
  "**/.ruff_cache",
  "**/site",          # mkdocs build output
  "**/.git",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.bandit]
exclude_dirs = [
  "tests",
  "tmp",
  ".venv",
  "docs",
  "examples",
  ".git",
  ".github",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
  "site",
  ".claude",
  ".gemini",
  ".codex",
  ".devcontainer",
  ".vscode",
]
skips = [
  "B101",
  "B603",
  "B607",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true
merge_prerelease = true
bump_pattern = "^(feat|fix|refactor|perf)"
bump_map = { "feat" = "MINOR", "fix" = "PATCH", "refactor" = "PATCH", "perf" = "PATCH" }
change_type_order = [ "BREAKING CHANGE", "feat", "fix", "refactor", "perf" ]
